On Action para os botões new e edit programados no scene

--- a/AddressApp/src/ch/makery/address/view/PersonOverview.fxml
+++ b/AddressApp/src/ch/makery/address/view/PersonOverview.fxml
@@ -61,8 +61,8 @@
                   </GridPane>
                   <HBox layoutX="208.0" layoutY="258.0" spacing="5.0">
                      <children>
-                        <Button mnemonicParsing="false" text="New..." />
-                        <Button mnemonicParsing="false" text="Edit..." />
+                        <Button mnemonicParsing="false" onAction="#handleNewPerson" text="New..." />
+                        <Button mnemonicParsing="false" onAction="#handleEditPerson" text="Edit..." />
                         <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                      </children>
                   </HBox>
